Point 필터링 및 DTO-> DAO 변환 작업 진행